# rancor-tools

./: README.md
backend/: Cargo.toml
backend/presets/: manifest.txt
backend/src/: addons.rs  hello_world.rs  main.rs  routes.rs
backend/src/addons/: item_texture.rs  manifest.rs  mod.rs  terrain_texture.rs
backend/src/routes/: merger.rs  mod.rs
frontend/: README.md  index.html  oque fazer amanha.txt  package-lock.json  package.json
frontend/pages/: _document.tsx  index.tsx
frontend/pages/addons/: index.tsx
frontend/pages/creatorApis/: index.tsx
frontend/pages/merge/: index.tsx
frontend/src/: customTags.ts  fileManager.ts  fileMerger.ts  main.ts  routers.ts  style.css  types.d.ts
frontend/src/api/: Addons.ts  Elements.ts  Events.ts  Renderer.ts  RuntimeVar.ts  files.ts  helpful.ts  others.ts  routes.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/merger/: page.tsx
frontend/src/app/teste/: page.tsx
frontend/src/components/: DropDown.tsx  FolderInput.tsx  RedirectButton.tsx
frontend/src/pages/: addons.html  creatorApis.html  home.html  merge.html
frontend/styles/: globals.css
