[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.35.1", features=["full"]}
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.196", features=["derive"]}
futures = "0.3.30"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
zip = "2.1.3"
http-body = "1.0.0"
